--- a/src/RepoZ.App.Win/RepoZ.App.Win.csproj
+++ b/src/RepoZ.App.Win/RepoZ.App.Win.csproj
@@ -31,6 +31,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="SimpleInjector" Version="5.3.3" />
+    <!-- <PackageReference Include="SimpleInjector.Extensions.ExecutionContextScoping" Version="4.0.0" /> -->
+    <!-- <PackageReference Include="SimpleInjector.Extensions.LifetimeScoping" Version="4.0.0" /> -->
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.ServiceModel.Federation" Version="4.8.1" />
@@ -51,7 +54,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="protobuf-net" Version="2.4.6" />
     <PackageReference Include="System.Diagnostics.DiagnosticSource" Version="4.3.0" />
-    <PackageReference Include="TinyIoC" Version="1.3" />
   </ItemGroup>
   <PropertyGroup />
   <ItemGroup>
