Misc Lucene search default operator from OR to AND; Tags visible in UI, Ipc Server as IModule;

--- a/src/RepoZ.Ipc/RepoZ.Ipc.csproj
+++ b/src/RepoZ.Ipc/RepoZ.Ipc.csproj
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="NetMQ" Version="4.0.0.207" />
+    <PackageReference Include="SimpleInjector" Version="5.3.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\RepoZ.Api\RepoZ.Api.csproj" />
   </ItemGroup>
 
 </Project>
