--- a/src/WindowsExplorerGitInfo/RepoZ.Plugin.WindowsExplorerGitInfo.csproj
+++ b/src/WindowsExplorerGitInfo/RepoZ.Plugin.WindowsExplorerGitInfo.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="System.Security.Permissions" Version="5.0.0" />
     <PackageReference Include="SimpleInjector" Version="5.3.3" />
+    <PackageReference Include="SimpleInjector.Packaging" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
