--- a/tests/RepoZ.Plugin.LuceneSearch.Tests/RepoZ.Plugin.LuceneSearch.Tests.csproj
+++ b/tests/RepoZ.Plugin.LuceneSearch.Tests/RepoZ.Plugin.LuceneSearch.Tests.csproj
@@ -3,7 +3,6 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -18,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\LuceneSearch\RepoZ.Plugin.LuceneSearch.csproj" />
+    <ProjectReference Include="..\..\src\RepoZ.Plugin.LuceneSearch\RepoZ.Plugin.LuceneSearch.csproj" />
   </ItemGroup>
 
 </Project>
