--- a/tests/RepoZ.Api.Common.Tests/RepoZ.Api.Common.Tests.csproj
+++ b/tests/RepoZ.Api.Common.Tests/RepoZ.Api.Common.Tests.csproj
@@ -14,6 +14,8 @@
     </PackageReference>
     <PackageReference Include="FluentAssertions" Version="6.6.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="17.0.12" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="17.0.12" />
     <PackageReference Include="Verify.Xunit" Version="16.7.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
