--- a/grr/grr.csproj
+++ b/grr/grr.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Authors>Andreas Wäscher</Authors>
     <Product>Git Repositories of RepoZ</Product>
     <Description>Command line interface to query repository information from RepoZ</Description>
